--- a/src/main/webapp/WEB-INF/jsp/home.html
+++ b/src/main/webapp/WEB-INF/jsp/home.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/mycss1.css"/>
-    <script type="text/javascript" src="../js/studyDept/studyDept.js"></script>
+    <script type="module" src="../js/studyDept/studyDept.js"></script>
     <style>
         .header {
             list-style-type: none;
@@ -175,7 +175,7 @@
         <center>
             <h3>综测规则：
                 <select id="moralXuenian" style="height: 45px;">
-                    <option style="margin: 5px; padding: 5px;">2018-2019</option>
+
                 </select>
             </h3>
 
@@ -198,8 +198,7 @@
     <div class="box">
         <h3>选择学年：
         <select id="zcxuenian" style="height: 45px;">
-            <option style="margin: 5px; padding: 5px;">2018-2019</option>
-            <option style="margin: 5px; padding: 5px;">2019-2020</option>
+
         </select>
         </h3>
         <h3>综测系统状态：
