--- a/src/main/webapp/WEB-INF/jsp/home.html
+++ b/src/main/webapp/WEB-INF/jsp/home.html
@@ -307,7 +307,7 @@
                                 <td colspan="2">
                                     <button class="btn btn-danger" id="submit_delete_moral">删除</button>
                                 </td>
-                            </tr>
+                            </tr>下·
                         </table>
                     </div>
                 </div>
@@ -411,6 +411,46 @@
             </div>
         </div>
     </div>
+    <!-- 添加学年模态框（Modal） -->
+    <div class="modal fade" id="addXuenian" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                        &times;
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">
+                        增加学年
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <form role="form">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <label for="startTime">开始时间:</label>
+                                <input type="number" id="startTime" class="form-control" placeholder="开始学年">
+                            </div>
+                            <div class="col-lg-2">
+                                <label>&emsp;</label>
+                                <input type="text" class="form-control" value="&minus;" disabled readonly>
+                            </div>
+                            <div class="col-lg-4">
+                                <label for="endTime">结束时间:</label>
+                                <input type="number" id="endTime" class="form-control" placeholder="结束学年">
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                    </button>
+                    <button type="button" class="btn btn-primary" id="saveXuenian">
+                        提交
+                    </button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal -->
     <script>
         function showm() {
             document.getElementById("ul_Sub").style.display = 'none';
@@ -427,7 +467,7 @@
 
 </div>
 <br/>
-
+</div>
 </body>
 <script>
     //ajax通过mid查询扣分项
