--- a/src/main/webapp/WEB-INF/jsp/monitorIndex.html
+++ b/src/main/webapp/WEB-INF/jsp/monitorIndex.html
@@ -12,7 +12,7 @@
     <link href="../css/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="../css/bootstrap/js/bootstrap.min.js"></script>
     
-    <script type="text/javascript" src="../js/monitor/MonitorManager.js" ></script>
+    <script type="module" src="../js/monitor/MonitorManager.js" ></script>
 
     <style>
 		html,body{
