--- a/src/main/webapp/WEB-INF/jsp/studentPage.html
+++ b/src/main/webapp/WEB-INF/jsp/studentPage.html
@@ -37,6 +37,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -235,7 +236,56 @@
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->	    
-</div>		
+</div>
+
+
+        <!-- 确认进入综合测评模态框框 -->
+        <div class="modal fade" id="delcfmModel">
+            <div class="modal-dialog">
+                <div class="modal-content message_align" style="background: oldlace">
+                    <div class="modal-header" >
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                aria-hidden="true">×</span></button>
+                        <h4 class="modal-title">请确认信息</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p style="color:red;">您将以下身份参与综合测评:</p>
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <td>学号</td>
+                                    <td>姓名</td>
+                                    <td>年级</td>
+                                    <td>专业</td>
+                                    <td>班级</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td id="m_sno"></td>
+                                <td id="m_sname"></td>
+                                <td id="m_termyear"></td>
+                                <td id="m_major"></td>
+                                <td id="m_class"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <p id="delcfmMsg" style="font-size:70%;color:red;">
+                            <pre>
+注：1、如信息有误,请到"信息查询-基本信息"检查个人信息。
+       解决方法:(1)"信息录入-基本信息"检查个人信息审核状态。
+               (2)在"信息录入-基本信息"修改个人信息后等待审核通过。
+    2、会计12班为中法班
+                            </pre>
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="hidden" id="submitUrl"/>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <a onclick="enterZc()" class="btn btn-success" data-dismiss="modal">确认进入综测系统</a>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
        
 		</nav>
        <div class="contain">
@@ -274,7 +324,7 @@
                      <li >
                        <a href="javascript:;" class="pageChange" id="questionnaire" ><i class="fa fa-dashboard fa-fw"></i> <font size="+1">信息采集填写</font></a>
                      </li>
-                     <li style="color:white"><a href="./public/to_stu"><i class="fa fa-dashboard fa-fw"></i> <font size="+1">综合测评</font></a></li>
+                     <li style="color:white"><a href="#" id="to_stu"><i class="fa fa-dashboard fa-fw"></i> <font size="+1">综合测评</font></a></li>
                      <li style="color:white"><a href="./lecture/myLecture"><i class="fa fa-dashboard fa-fw"></i> <font size="+1">讲座管理</font></a></li>
                       <li>
                        <a href="javascript:;" id="file_download" ><i class="fa fa-dashboard fa-fw"></i> <font size="+1">文件下载</font></a>
